--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,16 +28,14 @@
         {% endif %}
 
         {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
+
+        <!-- set github image with link to profile -->
+        <a href="{{ site.github.owner_url }}">
+          <img class="avatar" src="devicon-github-original" alt="Github" />
+        </a>
         {% endif %}
 
-        {% if site.show_downloads %}
-        <ul class="downloads">
-          <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
-          <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
-        </ul>
-        {% endif %}
+        
       </header>
       <section>
 
