--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,8 +30,7 @@
         {% if site.github.is_user_page %}
 
         <!-- set github image with link to profile: format should be github logo and nickname -->
-        <p class="view"><a href="{{ site.github.owner_url }}"><img src="images/githublogo.png" alt="nicolezattarin" /></a></p>
-        <p class="view"><a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
+        <p class="view"><a href="{{ site.github.owner_url }}"><img src="images/githublogo.png" alt="nicolezattarin" width="50"/></a></p>
 
         {% endif %}
 
