--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,10 +28,14 @@
         {% endif %}
 
         {% if site.github.is_user_page %}
-
         <!-- set github image with link to profile: format should be github logo and nickname -->
         <p class="view"><a href="{{ site.github.owner_url }}"><img src="images/githublogo.png" alt="nicolezattarin" width="50"/></a></p>
-
+        {% endif %}
+        {% if site.email %}
+        <p class="view"><a href="mailto:{{ site.email }}"><img src="images/Gmail-logo.png" alt="nicolezattarin" width="50"/></a></p>
+        {% endif %}
+        {% if site.twitter %}
+        <p class="view"><a href="https://twitter.com/{{ site.twitter }}"><img src="images/twitter.jpg" alt="nicolezattarin" width="50"/></a></p>
         {% endif %}
 
         
