--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
         <p class="view"><a href="mailto:{{ site.email }}"><img src="images/Gmail-logo.png" alt="nicolezattarin" width="50"/></a></p>
         {% endif %}
         {% if site.twitter_username %}
-        <p class="view"><a href="https://twitter.com/{{ site.twitter }}"><img src="images/twitter.jpg" alt="nicolezattarin" width="50"/></a></p>
+        <p class="view"><a href="https://twitter.com/{{ site.twitter_username }}"><img src="images/twitter.jpg" alt="nicolezattarin" width="50"/></a></p>
         {% endif %}
 
         
