--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,16 +27,18 @@
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
 
+        <p align="float">
         {% if site.github.is_user_page %}
         <!-- set github image with link to profile: format should be github logo and nickname -->
-        <p class="view"><a href="{{ site.github.owner_url }}"><img src="images/githublogo.png" alt="nicolezattarin" width="50"/></a></p>
+        <a href="{{ site.github.owner_url }}"><img src="images/githublogo.png" alt="nicolezattarin" width="50"/></a></p>
         {% endif %}
         {% if site.email %}
-        <p class="view"><a href="mailto:{{ site.email }}"><img src="images/Gmail-logo.png" alt="nicolezattarin" width="50"/></a></p>
+        <a href="mailto:{{ site.email }}"><img src="images/Gmail-logo.png" alt="nicolezattarin" width="50"/></a></p>
         {% endif %}
         {% if site.twitter_username %}
-        <p class="view"><a href="https://twitter.com/{{ site.twitter_username }}"><img src="images/twitter.jpg" alt="nicolezattarin" width="50"/></a></p>
+        <a href="https://twitter.com/{{ site.twitter_username }}"><img src="images/twitter.jpg" alt="nicolezattarin" width="50"/></a></p>
         {% endif %}
+       </p>
 
         
       </header>
