--- a/css/style.css
+++ b/css/style.css
@@ -121,8 +121,8 @@ figure {
         height: auto;
       } }
   #colorlib-aside .author-img {
-    width: 150px;
-    height: 150px;
+    width: 250px;
+    /* height: 150px; */
     margin: 0 auto;
     margin-bottom: 30px;
     /* -webkit-border-radius: 50%;
