--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ figure {
       } }
   #colorlib-aside .author-img {
     width: 250px;
-    /* height: 150px; */
+    height: 350px;
     margin: 0 auto;
     margin-bottom: 30px;
     /* -webkit-border-radius: 50%;
