--- a/css/style.css
+++ b/css/style.css
@@ -504,8 +504,8 @@ margin-left: 10px;}
   font-weight: 500; }
 
 .hire {
-  padding: 2em;
-  background: #f9bf3f; }
+  padding: 20px;
+  background: #ffd780; }
   .hire h2 {
     line-height: 1.5; }
   .hire .btn-hire {
