--- a/css/style.css
+++ b/css/style.css
@@ -505,7 +505,7 @@ margin-left: 10px;}
 
 .hire {
   padding: 20px;
-  background: #c5b2fd; }
+  background: #d5c9fb; }
   .hire h2 {
     line-height: 1.5; }
   .hire .btn-hire {
