--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ figure {
   width: 300px;
   position: fixed;
   z-index: 1001;
-    background-color: #fae5ff;
+    background-color: #f6f2f7;
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s; }
