--- a/css/style.css
+++ b/css/style.css
@@ -505,7 +505,7 @@ margin-left: 10px;}
 
 .hire {
   padding: 20px;
-  background: #e3daff; }
+  background: #f2f3f7; }
   .hire h2 {
     line-height: 1.5; }
   .hire .btn-hire {
