--- a/css/style.css
+++ b/css/style.css
@@ -1594,3 +1594,11 @@ align-items: stretch;}
   float: left;
 
 }
+
+.container {
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 20px;
+  box-sizing: border-box;
+  float: left;
+}
